--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container" id="container">
         <div class="form-container sign-up">
             <form>
-                <h1>Memorization</h1>
+                <h1>Memory</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
@@ -54,7 +54,7 @@
                     <button class="hidden" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
-                    <h1>This is a memorization game</h1>
+                    <h1>  Game</h1>
                     <p>  </p>
                     <button class="hidden" id="register">Sign Up</button>
                 </div>
